--- a/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/PersonalSubmitWork.storyboard
+++ b/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/PersonalSubmitWork.storyboard
@@ -13,7 +13,7 @@
         <!--Personal Submit Work View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="PersonalSubmitWorkViewController" customModule="portfolio_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PersonalSubmitWork" id="Y6W-OH-hqX" customClass="PersonalSubmitWorkViewController" customModule="portfolio_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
