--- a/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/PersonalSubmitWork.storyboard
+++ b/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/PersonalSubmitWork.storyboard
@@ -252,9 +252,16 @@
                     <navigationItem key="navigationItem" id="n1M-Dd-HX8">
                         <barButtonItem key="leftBarButtonItem" title="サムネ" id="fz9-on-2JU"/>
                         <rightBarButtonItems>
-                            <barButtonItem image="submit" id="LzK-Kn-k3e"/>
+                            <barButtonItem image="submit" id="LzK-Kn-k3e">
+                                <connections>
+                                    <action selector="submitWork:" destination="Y6W-OH-hqX" id="guZ-DO-k03"/>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem title="下書き" id="Lwg-p5-BTn">
                                 <color key="tintColor" red="1" green="0.56470588239999997" blue="0.70196078429999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="draftWork:" destination="Y6W-OH-hqX" id="4Y1-Mz-Coo"/>
+                                </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
@@ -262,7 +269,11 @@
                     <connections>
                         <outlet property="addTagButton" destination="jMR-I3-kZc" id="FiD-yW-hwj"/>
                         <outlet property="addThumbnailsWorkButton" destination="2of-ac-BGG" id="f2O-ai-Zb8"/>
+                        <outlet property="githubLinkTextField" destination="68A-vX-Yow" id="KJk-hS-WAB"/>
+                        <outlet property="wordTitleTextField" destination="I8s-qK-7as" id="Wfb-a0-RTo"/>
                         <outlet property="workDescriptionTextView" destination="74A-Un-EHJ" id="nF3-y2-fdv"/>
+                        <outlet property="workTagsCollectionView" destination="Jdg-VR-6Le" id="fMy-oq-m1O"/>
+                        <outlet property="youtubeLinkTextField" destination="YWB-ZO-KZc" id="eG6-Oz-BKT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
