--- a/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/PersonalSubmitWork.storyboard
+++ b/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/PersonalSubmitWork.storyboard
@@ -199,6 +199,17 @@
                                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DNd-4V-vgD">
                                                                             <rect key="frame" x="0.0" y="0.0" width="86" height="74"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
+                                                                            <subviews>
+                                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eQZ-Ng-uqO">
+                                                                                    <rect key="frame" x="0.0" y="8" width="86" height="66"/>
+                                                                                </imageView>
+                                                                            </subviews>
+                                                                            <constraints>
+                                                                                <constraint firstItem="eQZ-Ng-uqO" firstAttribute="leading" secondItem="DNd-4V-vgD" secondAttribute="leading" id="0Sf-sk-FLC"/>
+                                                                                <constraint firstAttribute="bottom" secondItem="eQZ-Ng-uqO" secondAttribute="bottom" id="55X-x3-dHK"/>
+                                                                                <constraint firstItem="eQZ-Ng-uqO" firstAttribute="top" secondItem="DNd-4V-vgD" secondAttribute="top" id="iJU-bz-YzI"/>
+                                                                                <constraint firstAttribute="trailing" secondItem="eQZ-Ng-uqO" secondAttribute="trailing" id="wvr-1o-LJd"/>
+                                                                            </constraints>
                                                                         </collectionViewCellContentView>
                                                                         <size key="customSize" width="86" height="74"/>
                                                                     </collectionViewCell>
