--- a/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/WorkThumbnailCollectionViewCell.xib
+++ b/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/WorkThumbnailCollectionViewCell.xib
@@ -20,10 +20,12 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Cb-tv-HBz">
                         <rect key="frame" x="0.0" y="0.0" width="80" height="70"/>
                     </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9fj-S8-jFJ">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9fj-S8-jFJ">
                         <rect key="frame" x="34" y="0.0" width="46" height="31"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="delete.backward" catalog="system"/>
+                        <buttonConfiguration key="configuration" style="plain" image="delete.backward" catalog="system">
+                            <color key="baseForegroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </buttonConfiguration>
                         <connections>
                             <action selector="deleteWorkThumbnail:" destination="gTV-IL-0wX" eventType="touchUpInside" id="4Ee-Ih-1I1"/>
                         </connections>
@@ -40,6 +42,7 @@
                 <constraint firstAttribute="trailing" secondItem="4Cb-tv-HBz" secondAttribute="trailing" id="ynh-Qk-X1P"/>
             </constraints>
             <connections>
+                <outlet property="deleteWorkThumbnailButton" destination="9fj-S8-jFJ" id="xwE-Cg-PzC"/>
                 <outlet property="workThumbnailImageView" destination="4Cb-tv-HBz" id="pf8-G1-lLv"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="71.651785714285708"/>
